# receipts-extractor

./: .gitignore  agentic_examples.py  agentic_receipt_parser.py  agentic_receipt_parser_functioncall.py  agentic_receipt_parser_json.py  app.py  app_agentic.py  gmail_auth.py  gmail_helpers.py  ollama_client.py  parser_hemkop.py  parser_spiceonwheels.py  prompt_param_extractor.py  pyproject.toml  receipt_models.py  receipt_processing.py  receipts.xlsx  utils.py
